--- a/css/store_style.css
+++ b/css/store_style.css
@@ -1,8 +1,8 @@
 
 body {
   font-family: monarcha, serif;
-font-weight: 300;
-font-style: normal;
+  font-weight: 300;
+  font-style: normal;
   display: block;
   color: #001489;
   background-color: #ffffff;
@@ -88,7 +88,6 @@ and (max-device-width: 812px){
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'Monarcha-Book';
     word-spacing: 10px;
   }
 
@@ -129,7 +128,6 @@ and (-webkit-device-pixel-ratio : 3) {
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'Monarcha-Book';
     word-spacing: 10px;
   }
   #logo {
