--- a/css/video_style.css
+++ b/css/video_style.css
@@ -1,8 +1,8 @@
 
 body {
   font-family: monarcha, serif;
-font-weight: 300;
-font-style: normal;
+  font-weight: 300;
+  font-style: normal;
   color: #001489;
   background-color: #ffffff;
   font-size: 18px;
@@ -134,7 +134,6 @@ and (max-device-width: 812px)
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'Monarcha-Book';
     word-spacing: 10px;
   }
   #logo {
