--- a/css/work_style.css
+++ b/css/work_style.css
@@ -1,5 +1,7 @@
 body {
-  font-family: 'monarcha-book';
+  font-family: monarcha, serif;
+  font-weight: 300;
+  font-style: normal;
   color: #001489;
   background-color: #ffffff;
   font-size: 18px;
@@ -188,7 +190,6 @@ and (max-device-width: 812px)
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'monarcha-book';
     word-spacing: 10px;
   }
   #logo {
@@ -229,7 +230,6 @@ and (-webkit-device-pixel-ratio : 3) {
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'monarcha-book';
     word-spacing: 10px;
   }
   #logo {
