--- a/projects/projcss/videoprojectstyle.css
+++ b/projects/projcss/videoprojectstyle.css
@@ -1,8 +1,8 @@
 
 body {
   font-family: monarcha, serif;
-font-weight: 300;
-font-style: normal;
+  font-weight: 300;
+  font-style: normal;
   color: #001489;
   background-color: #ffffff;
   font-size: 18px;
@@ -90,7 +90,6 @@ and (max-device-width: 812px)
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'Monarcha-Book';
     word-spacing: 10px;
   }
 
@@ -124,7 +123,6 @@ and (max-device-width: 812px)
 and (-webkit-device-pixel-ratio : 3) {
 
   body {
-    font-family: 'Monarcha-Book';
     color: #001489;
     background-color: #ffffff;
     font-size: 30px;
@@ -135,7 +133,6 @@ and (-webkit-device-pixel-ratio : 3) {
     margin-top: 17%;
     min-height: 40px;
     font-size: 36px;
-    font-family: 'Monarcha-Book';
     word-spacing: 10px;
   }
 
